--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "popmotion": "^8.5.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-pose": "^4.0.4",
     "react-scripts": "2.1.2"
   },
   "scripts": {
